feat: add popup login

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>NextAuth Honojs</title>
-    <meta name="description" content="This is an example site to demonstrate how to use NextAuth.js for authentication" />
+    <title>Auth.js HOno</title>
+    <meta name="description" content="This is an example site to demonstrate how to use Auth.js for authentication" />
   </head>
   <body>
     <div id="root"></div>
