--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Auth.js HOno</title>
+    <title>Auth.js Hono</title>
     <meta name="description" content="This is an example site to demonstrate how to use Auth.js for authentication" />
   </head>
   <body>
